# monix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt  main.cpp  persist.h  pwsplit.h  theme.cpp  theme.h
capture/: README.md  capture.sh  decode.py  guided.sh  host-reclaim.sh  host-release.sh  passthrough.sh
docs/: DEVICES.md  PROTOCOL.md
driver/: 99-audient-id.rules  Makefile  audient_id.c  dkms.conf
lib/: monix.cpp  monix.h
re/: README.md  dis.sh  dumpconst.py
setup/: id24-split.conf  id24-stereo-sink.conf
tools/: monixctl.cpp
